[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/Scripts/Enemies/DarkEvilEnemies/MaleZombie.gd" type="Script" id=1]
[ext_resource path="res://Assets/Enemies/Reaper/Idle/0_Reaper_Man_Idle Blinking_015.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_003.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_010.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_008.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_009.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_005.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_007.png" type="Texture" id=8]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_011.png" type="Texture" id=10]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_006.png" type="Texture" id=11]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_004.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_000.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_001.png" type="Texture" id=16]
[ext_resource path="res://Assets/Enemies/Reaper/Running/0_Reaper_Man_Running_002.png" type="Texture" id=17]
[ext_resource path="res://Assets/Attacks/audio/Explosion.wav" type="AudioStream" id=25]
[ext_resource path="res://Scenes/SceneList/AttackScenes/WeakSpots/RectFireWeakSpot.tscn" type="PackedScene" id=41]
[ext_resource path="res://Scenes/SceneList/ActorScenes/PlayersScenes/Information/PlayerSpeechArea.tscn" type="PackedScene" id=42]
[ext_resource path="res://Scenes/SceneList/AttackScenes/AttackArea/StompingArea.tscn" type="PackedScene" id=43]
[ext_resource path="res://Scenes/SceneList/AttackScenes/BurnType2.tscn" type="PackedScene" id=44]
[ext_resource path="res://Scenes/SceneList/AttackScenes/AttackArea/RangeAttackSpotRect.tscn" type="PackedScene" id=45]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.9838, 50.3206 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 3 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 10 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 35.9243, 44.8081 )

[node name="Reaper" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="EnemyPhysicArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ZombieImage" type="AnimatedSprite" parent="."]
position = Vector2( -0.179466, 37.1406 )
scale = Vector2( 0.516826, 0.53074 )
frames = SubResource( 2 )
animation = "dead"
frame = 1
playing = true
offset = Vector2( 0, -70 )

[node name="PlayerSpeechArea" parent="ZombieImage" instance=ExtResource( 42 )]
position = Vector2( -6.80104, -174.075 )
scale = Vector2( 0.7, 0.7 )

[node name="AttackArea2D" type="Area2D" parent="." groups=[
"EnemyArea",
]]
visible = false

[node name="AttackArea" type="CollisionShape2D" parent="AttackArea2D"]
position = Vector2( -1.39691, -1.00786 )
shape = SubResource( 3 )

[node name="StompingArea" parent="." instance=ExtResource( 43 )]
visible = false
position = Vector2( 10.7922, -56.1203 )

[node name="StompArea" parent="StompingArea" index="0"]
position = Vector2( -12.8221, 14.1293 )
scale = Vector2( 0.3, 0.3 )

[node name="BurnType2" parent="." instance=ExtResource( 44 )]
visible = false

[node name="FlameBurn" parent="BurnType2" index="0"]
position = Vector2( 0.735102, 0 )
scale = Vector2( 0.301743, 0.391688 )

[node name="RangeAttackSpot" parent="." groups=[
"BurnType2",
"zombie",
] instance=ExtResource( 45 )]

[node name="Exploding" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( -1.4702, 3.67546 )
scale = Vector2( 2.83038, 4.02674 )
process_parent = true
physics_process_parent = true

[node name="RectFireWeakSpot" parent="." instance=ExtResource( 41 )]
position = Vector2( 1.47021, 0.735092 )

[node name="TextTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="body_entered" from="AttackArea2D" to="." method="_on_AttackArea2D_body_entered"]
[connection signal="finished" from="Exploding" to="." method="_on_Exploding_finished"]
[connection signal="timeout" from="TextTimer" to="." method="_on_TextTimer_timeout"]

[editable path="StompingArea"]

[editable path="BurnType2"]

[editable path="RangeAttackSpot"]

[editable path="RectFireWeakSpot"]
